src/objects/BOM_Parts__c/BOM_Parts__c.object-meta.xml
<CustomObject>
    <label>Master Components</label>
    <nameField>
        <label>Components Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>