src/objects/BOM_Parts__c/fields/Deutch_Description__c.field-meta.xml
<CustomField>
    <fullName>Deutch_Description__c</fullName>
    <label>Deutsch Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>